--- a/PetShop.Web.UI/Pages/_Host.cshtml
+++ b/PetShop.Web.UI/Pages/_Host.cshtml
@@ -12,7 +12,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PetShop.Web.UI</title>
     <base href="~/" />
-    <link rel="stylesheet" href="_content/Radzen.Blazor/css/default.css">
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="_content/Radzen.Blazor/css/default-base.css">
     <link href="css/site.css" rel="stylesheet" />
     <link href="PetShop.Web.UI.styles.css" rel="stylesheet" />
 </head>
@@ -31,6 +32,10 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
+    <environment include="Development">
+        <script src="~/Scripts/hotReload.js"></script>
+    </environment>
+
     <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
 </body>
 </html>
